--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,10 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "react-toast": "^1.0.3",
-    "react-tooltip": "^5.10.5"
+    "react-toastify": "^9.1.2",
+    "react-tooltip": "^5.10.5",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2",
