--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@thirdweb-dev/sdk": "^3.10.5",
     "classnames": "^2.3.2",
     "ethers": "^5.7.2",
+    "firebase": "^9.19.1",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
