--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "firebase": "^9.19.1",
     "prettier": "^2.8.7",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-parallax-tilt": "^1.7.126",
