fix: fix issues

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
-VITE_PROJECT_ID = 13eecb85-e8da-4d6a-b356-0ac6f4c20caa
+VITE_PROJECT_ID = prj_7OXyUuSUlCeklZhvcdWgh5Rkxl0D
 VITE_PRIVATE_KEY = 6cb966c1-f3c2-4a14-995b-e234738cd37a
 VITE_FIREBASE_API_KEY="AIzaSyDbnzv9QKkIvlC_mrh-6pjmnqgXjonK3YU"
 VITE_FIREBASE_AUTH_DOMAIN="coinwatch-3bb4b.firebaseapp.com"
@@ -7,3 +7,5 @@ VITE_FIREBASE_STORAGE_BUCKET="coinwatch-3bb4b.appspot.com"
 VITE_FIREBASE_MESSAGING_SENDER_ID="101279682963"
 VITE_FIREBASE_APP_ID="1:101279682963:web:2044bb71f084249c25d866"
 VITE_FIREBASE_MEASUREMENT_ID="G-X3KTDHBZL9"
+VITE_SOCKET_ENDPOINT_1="http://localhost:5001"
+VITE_SOCKET_ENDPOINT=https://poketcg.onrender.com
