--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview",
     "deploy": "yarn build && npx thirdweb@latest upload dist"
   },
+  "proxy": "https://google.com/",
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@heroicons/react": "^2.0.17",
@@ -37,7 +38,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1",
-    "vite": "^3",
+    "vite": "^3.2.5",
     "vite-plugin-node-polyfills": "^0.7.0"
   }
 }
