--- a/client/.env
+++ b/client/.env
@@ -8,4 +8,5 @@ VITE_FIREBASE_MESSAGING_SENDER_ID="101279682963"
 VITE_FIREBASE_APP_ID="1:101279682963:web:2044bb71f084249c25d866"
 VITE_FIREBASE_MEASUREMENT_ID="G-X3KTDHBZL9"
 VITE_SOCKET_ENDPOINT_1="http://localhost:5001"
-VITE_SOCKET_ENDPOINT=https://poketcg.onrender.com
+VITE_SOCKET_ENDPOINT_2=https://poketcg.onrender.com
+VITE_SOCKET_ENDPOINT="https://Multiplayer-TIC-TAC-TOE.prajjwalkapoor.repl.co"
